<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sec_item_jail_broken"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_security_jail_broken"/>
        <TextView
            android:id="@+id/sec_item_hook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_security_hook"/>
        <TextView
            android:id="@+id/sec_item_emulator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_security_emulator"/>
        <TextView
            android:id="@+id/sec_item_virtual_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_security_virtual_app"/>
        <TextView
            android:id="@+id/sec_item_mock_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_security_mock_location"/>
        <TextView
            android:id="@+id/sec_item_ext_storage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_security_ext_storage"/>
        <TextView
            android:id="@+id/sec_item_dev_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_security_dev_settings"/>
        <TextView
            android:id="@+id/sec_item_debugger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_security_debugger"/>
        <TextView
            android:id="@+id/sec_item_adb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_security_adb"/>
    </LinearLayout>

    <Button
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/detect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_detect"
        style="@style/TextAppearance.AppCompat.Widget.Button.Colored" />

</androidx.constraintlayout.widget.ConstraintLayout>